--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,12 +1,12 @@
 <ul>
-	<%= @cart.each do |product| %>
+	<%= cart.each do |product| %>
 		<li>
 			<%= product %>
 		</li>
 	<% end %>
 </ul>
 
-<%= form_tag '/products' %>
+<%= form_tag '/products' do %>
 	<%= text_field_tag 'product' %>
 	<%= submit_tag %>
 <% end %>
